# Smart-PDF-Extractor

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
sample_dataset/schema/: output_schema.json
src/: compute_dominant_gaps.py  heading_extractor.py  heading_merger.py  heading_ranker.py  main.py  ocr_utils.py  parallel_heading_merger.py  parallel_worker.py
